# BAC-Website

./: .gitignore  Makefile  README.md  data2.json  db.sqlite3  dump.json  pyproject.toml  requirements.txt
AquaAerobic/: apps.py  forms.py  models.py  urls.py  views.py
AquaAerobic/migrations/: 0001_initial.py
BACsite/BACsite/: settings.py
Coaches/: admin.py  apps.py  models.py  urls.py  views.py
Coaches/migrations/: 0001_initial.py  0002_compcoachswim_coaches_title.py
Competitive/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
Competitive/migrations/: 0001_initial.py  0002_agpolopage_polo_registration.py  0003_rename_polo_registration_agpolopage_polo_registration_link.py
Home/: admin.py  forms.py  middleware.py  models.py  urls.py  views.py
Home/migrations/: 0001_initial.py  0002_homepage_show_download_link.py  0003_alter_homepage_show_download_link.py  0004_popup.py  0005_alter_popup_downloadable_file_alter_popup_message.py  0008_delete_popup.py  (+3 more)
Lapswim/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
Legacy/: admin.py  apps.py  models.py  urls.py  views.py
Lessons/: admin.py  forms.py  models.py  urls.py  views.py
MastersBAC/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
Recswim/: apps.py  forms.py  models.py  urls.py  views.py
Reg/: apps.py  forms.py  views.py
aboutus/: admin.py  forms.py  models.py  urls.py  views.py
fresh_env/: pyvenv.cfg
holiday/: forms.py  models.py  urls.py  views.py
project/: .env  settings.py  urls.py
summProgram/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
(+148 files in other folders)
